# partially-optimal-subspace-clustering

./: .gitmodules  CMakeLists.txt  README.md
data/: vertices.csv
src/: 0_Settings.h  Algorithms.cpp  Algorithms.h  Constants.h  DataHandler.cpp  DataHandler.h  Graph.cpp  Graph.h  Settings.h  TripleCosts.cpp  TripleCosts.h  main.cpp
src/Graph/: Constraints.cpp  Constraints.h  Instance.h  TripleCosts.cpp  TripleCosts.h  Triples.h
src/PersistencyCriteriaAlgorithms/: EdgeCriterion.cpp  EdgeCriterion.h  EdgeCriterionCut.cpp  EdgeCriterionCut.h  EdgeCriterionJoin.cpp  EdgeCriterionJoin.h  EdgeCutCriterion.h  PersistencyCriterion.cpp  PersistencyCriterion.h  TriangleCriterion.cpp  TriangleCriterion.h  TriangleCutCriterion.h  TriangleJoinCriterion.h
temp/: constraints.json  synthesized_instance.csv  triple_costs.json
tests/: EdgeCriterionCut.cpp  EdgeCriterionCut_test.cpp  EdgeCutCriterion_test.cpp  TriangleCutCriterion_test.cpp
